# WasmSVGGraphics

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: all.html  constant.SVG_NS.html  fn.create_element.html  fn.create_element_ns.html  fn.get_document.html  index.html  sidebar-items.js
docs/color/: enum.TransparentableColor.html  index.html  sidebar-items.js  struct.Color.html
docs/color/default/: constant.BLACK.html  constant.WHITE.html  index.html  sidebar-items.js
docs/errors/: enum.DomError.html  enum.RendererError.html  index.html  sidebar-items.js
docs/figures/: constant.SHAPE_ID_PREFIX.html  index.html  sidebar-items.js  struct.Figure.html
docs/figures/circle/: index.html  sidebar-items.js  struct.CircleProps.html
docs/figures/path/: index.html  sidebar-items.js  struct.PathProps.html
docs/figures/preset/: fn.circle.html  fn.line.html  index.html  sidebar-items.js
docs/figures/shape/: enum.AttributeField.html  enum.SubShape.html  index.html  sidebar-items.js  struct.Shape.html  struct.ShapeStyle.html
docs/figures/sub_path/: enum.SubPath.html  index.html  sidebar-items.js
docs/renderer/: constant.DEFAULT_VIEWBOX.html  index.html  sidebar-items.js  struct.Renderer.html
docs/shapes/: index.html  sidebar-items.js  struct.Figure.html  struct.FigureStyle.html  struct.Shape.html  trait.Figureable.html
src/: color.rs  default.rs  errors.rs  figures.rs  lib.rs  prelude.rs  renderer.rs
src/colors/: hex.rs
src/figures/: circle.rs  figure.rs  mod.rs  path.rs  shape.rs  sub_path.rs
tests/: web.rs
