[package]
name = "wasm_svg_graphics"
version = "1.0.0"
authors = ["Gijs Burghoorn <g.burghoorn@gmail.com>"]
edition = "2018"
description = "A Rust library for rendering SVG Graphics with WASM"
homepage = "https://github.com/coastalwhite/WasmSVGGraphics"
repository = "https://github.com/coastalwhite/WasmSVGGraphics.git"
license = "MIT"

keywords = ["web", "wasm", "svg", "rendering", "render"]

categories = ["graphics", "rendering", "wasm"]

readme = "./README.md"

[dependencies]
geom_2d = {git = "https://github.com/coastalwhite/Geom2D.git", version="0.2.0"}
svg_definitions = {git = "https://github.com/coastalwhite/svg_definitions.git", version="0.2.0"}

[dependencies.web-sys]
version = "0.3.4"

features = [
    'console',
    'Window',
    'Document',
    'DocumentFragment',
    'Node',
    'Element',
    'HtmlElement',
    'HtmlSlotElement',
    'HtmlTemplateElement',
    'CustomElementRegistry',
    'ShadowRoot',
    'ShadowRootInit',
    'ShadowRootMode',
]
