[package]
name = "wasm_svg_graphics"
version = "1.0.0"
authors = ["Gijs Burghoorn <g.burghoorn@gmail.com>"]
edition = "2018"
description = "A Rust library for rendering SVG Graphics with WASM"
homepage = "https://github.com/coastalwhite/WasmSVGGraphics"
repository = "https://github.com/coastalwhite/WasmSVGGraphics.git"
license = "MIT"

keywords = ["web", "wasm", "svg", "rendering", "render"]

categories = ["graphics", "rendering", "wasm"]

readme = "./README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
svg_definitions = "0.1.0"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3.4"

features = [
    'Window',
    'Document',
    'Node',
    'Element',
    'HtmlElement',
]

[profile.release]
opt-level = "s"
